data/derived/comb/progs/unify/prog4130.ml.out
Characters 189-190:
  | Average (x,y)    -> (eval (e,x,y) +. eval(e,x,y))/.2.0
                                 ^
Error: This expression has type expr but an expression was expected of type
         float
